tim-58 test config
Signed-off-by: Tim Farber-Newman <tim.farber-newman@swirldslabs.com>